continued layout of NIH case study

--- a/nih.html
+++ b/nih.html
@@ -493,7 +493,7 @@
           <li><p>Provide revised sitemap per heuristic, competitive, content and analytical findings</p></li>
         </ul>
       </p>
-      <p class="site-acrchitecture-intro-close">In addition to the finding of the content audit, I considered the heuristic, competitive and site traffic analyses to make an informed recommendation.</p>
+      <p class="site-architecture-intro-close">In addition to the finding of the content audit, I considered the heuristic, competitive and site traffic analyses to make an informed recommendation.</p>
 
       <h3 class="impact-feasibility-matrix-headline">Heuristic & Competitive Analyses: Impact-to-Feasibility Matrix</h3>
       <p class="impact-feasibility-matrix-intro">A heuristic and competitive analysis revealed several oportunities that would help to drive better engegement with lisencing and collaboration content: easy access to <strong>search</strong>, improved <strong>primary navigation</strong> with a robust <strong>mega-navigation</strong> and allowing users to <strong>save content</strong> for later access.</p>
@@ -555,7 +555,7 @@
 
       <figure class="current-navigation">
         <img class="current-navigation-image" src="images/NIH/current-navigation.png" alt="page distribution findings"></img>
-        <figcaption>The existign navigation</figcaption>
+        <figcaption>The existing navigation</figcaption>
       </figure>
 
       <p class="revised-navigaton-list-headline">Recommended revised navigation</p>
