Continued work on NIH case study

--- a/nih.html
+++ b/nih.html
@@ -775,7 +775,7 @@
         <li><p>Contact page: Reduced steps for user to contact NIH OTT</p></li>
         <li><p>Sign in/ Sign up: Reduced barriers to entry</p></li>
       </ul>
-      <p class="">I shared the Sketch file with a creative designer, who began incorporating brand colors, typography and iconography and I assembled those work in progress designs into an inVision prototype.</p>
+      <p class="creative-design-intro">I shared the Sketch file with a creative designer, who began incorporating brand colors, typography and iconography and I assembled those work in progress designs into an inVision prototype.</p>
 
       <p class="prototype-is-headline">The prototype will:</p>
       <ul class="prototype-is-list">
