--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -86,7 +86,7 @@
         <p class="project-overview-copy">Genentech and Roche’s Floodlight MS is an app that allows patients living with MS to complete simple tasks on their devices to capture data that tracks disease progression and allows their providers to interpret  these objective measures through a provider portal. The Floodlight MS app closes gaps in communication and reduces subjectivity in patient reported symptoms. My team was involved in two phases of the website that partners with the app.</p>
 
         <h3 class="project-problem-headline">The problem</h3>
-        <p class="project-problem-statemnt">The true challenges came down to limited real estate and time. The first phase of of the site served as a pre-launch introduction to the Floodlight MS app and had minimal content. The brief called for the full launch website to have a much more robust content strategy,  which was directly in conflict with the imperative for a minimalistic layout with few pages. Additionally, a highly consolidated timeline leading to launch required a new approach to    working efficiently.</p>
+        <p class="project-problem-statemnt">The true challenges came down to limited real estate and time. The first phase of the site served as a pre-launch introduction to the Floodlight MS app and had minimal content. The brief called for the full launch website to have a much more robust content strategy,  which was directly in conflict with the imperative for a minimalistic layout with few pages. Additionally, a highly consolidated timeline leading to launch required a new approach to    working efficiently.</p>
 
         <h3 class="project-solution-headline">The solution</h3>
         <p class="project-solution-statemnt">Careful consideration of the site architecture and collaboration between UX and copywriting allowed us to deliver robust content in a minimalist layout. We reassessed a legacy workflow between UX and creative direction and shifted our approach to minimize inefficiencies.  By partnering to work in succession with one Sketch file; UX and creative design significantly reduced the time required to transition wireframes into layouts ready for development.</p>
@@ -126,7 +126,7 @@
       <ul class="brief-list-content">
         <li><p>The scalable, mobile first, site needs to be <strong>content rich, but visually light</strong>.</p></li>
         <li><p><strong>Prioritize reusing previously approved content</strong> already reviewed by governance risk & compliance (GRC).</p></li>
-        <li><p><strong>Brand new HCP-specific content</strong> will provided a deep-dive into usage, benefits and onboarding.</p></li>
+        <li><p><strong>Brand new HCP-specific content</strong> will provide a deep-dive into usage, benefits and onboarding.</p></li>
         <li><p>We could add <strong>only one new page</strong> to the existing 1-page microsite structure.</p></li>
         <li><p>We would <strong>design a global site</strong> and the site design would be provided to and adapted for use by local affiliates, adhering to their local laws and regulations governing medical device messaging.</p></li>
         <li><p>We were to take inspiration from sites that <strong>reflect the client's design vision.</strong></p></li>
