--- a/nih.html
+++ b/nih.html
@@ -392,13 +392,13 @@
         <p class="page-findings-recommendation"><strong>Recommendation</strong>: Update the technology abstract template to improve readability</p>
       </figure>
 
-      <h4 class="abstract-findings-headline">Disease Area Focus of Technology Abstracts: A sample of 100 abstracts revealed that <strong>Cancer</strong> and <strong>Virology </strong>are most studied, but<strong>18% are difficult to classify</strong>.</h4>
+      <h4 class="abstract-findings-headline">Disease Area Focus of Technology Abstracts: A sample of 100 abstracts revealed that <strong>Cancer</strong> and <strong>Virology </strong>are most studied, but <strong>18% are difficult to classify</strong>.</h4>
       <figure class="abstract-findings">
         <img class= "abstract-findings-image" src="images/NIH/findings-abstracts.png" alt="page distribution findings"></img>
         <figcaption>Technology abstract findings</figcaption>
       </figure>
 
-      <h4 class="reviewing-abstrats-headline">How I Reviewed Technology Abstracts & challenges encountered</h4>
+      <h4 class="reviewing-abstrats-headline">How I reviewed technology abstracts & challenges encountered</h4>
       <ul class= reviewing-abstracts-list>
         <li><p>Fixed-list search filters: include disease area, application, development stage, technology, institute/center, seeking collaboration</p></li>
         <li><p>Disease area: (infectious disease (viral)) inferred from headline</p></li>
@@ -433,7 +433,7 @@
         <p class="reviewing-inventory-recommendation">Recommendations: Verify path of all breadcrumbs and delete 1,329 broken inventor inventory pages</p>
       </figure>
 
-      <h4 class="product-findings-headline"> Count of Product Releases by Institutes and Centers (ICs):<strong>4 out of 11</strong> ICs are responsible for<strong>94%</strong> of published product releases.</h4>
+      <h4 class="product-findings-headline"> Count of Product Releases by Institutes and Centers (ICs): <strong>4 out of 11</strong> ICs are responsible for <strong>94%</strong> of published product releases.</h4>
       <p class="product-findings-recommendation">Recommendations: Explore IC user experience to guide future improvements to components and content</p>
       <ul class="product-findings-list">
         <li><p>Submitting abstracts</p></li>
