Added placeholder homepage hero image

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
     <section class="hero">
       <h1 class="hero-headline">Hi, I’m Jess, a UX design lead from New York</h1>
+      <img class="hero-portrait" src="images/homepage-2021/jb-test-portrait-2022.png" width="" height="" alt="Jessica Blanchard Working at Laptop">
       <p class="hero-copy">I specialize in creating compelling digital experiences that drive user engagement. Understanding users, business objectives and their symbiotic relationship is at the core of my practice.</p>
       <button onclick="window.location.href = '#work';">Read case studies</button>
 
