adjustments for addition of new case study

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="featured-work-2">
         <img class="featured-project-image-2" src="images/nih-homepage-screenshot.png" alt="NIH homepage screenshot"></img>
         <h6 class="eyebrow-text-2">Life sciences | Technology database</h6>
-        <h5 class="featured-project-title-2">National Institute of Health Office of Technology Transfer responsive web design</h5>
+        <h5 class="featured-project-title-2">NIH Office of Technology Transfer</h5>
         <p class="featured-project-description-2">The National Institute of Health Office of Technology Transfer manages the licensing of patented inventions from scientists at various governmental agencies, such as the National Cancer Institute (NCI) and the National Institute for Allergies and Infectious Disease (NIAID). I was tasked with redesigning their site to make it easier for users to successfully find and lisence technology.</p>
         <!-- <button class="see-the-full-case-study">See the full case study</button> -->
         <button onclick="window.location.href = 'nih.html';">See the full case study</button>
