--- a/nih.html
+++ b/nih.html
@@ -74,7 +74,7 @@
 
     <section class="hero">
 
-      <h1 class="hero-headline">National Institute of Health</br> Office of Technology Transfer</h1>
+      <h1 class="hero-headline">NIH Office of Technology Transfer</h1>
       <p class="hero-copy">The National Institute of Health Office of Technology Transfer manages the licensing of patented inventions from scientists at various governmental agencies, such as the National Cancer Institute (NCI) and the National Institute for Allergies and Infectious Disease (NIAID). I was tasked with redesigning their site to make it easier for users to successfully find and lisence technology.</p>
       <img class="case-study-hero-image" src="images/nih-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="300px"></img>
     </section>
