--- a/about-2.0.html
+++ b/about-2.0.html
@@ -79,7 +79,7 @@
 
       <section class="hero">
           <h1 class="hero-headline">It all started with a missing pizza</h1>
-          <img class="hero-image" src="images/jb-headshot4.jpg" alt= "Jessica's headshot">
+          <img class="hero-image" src="images/homepage-2021/jb-test-portrait-2022.png" width="" height="" alt="Jessica Blanchard Working at Laptop">
           <p class="hero-copy">UX design is more than a career choice for me; its a function of my commitment to problem solving. It's been a lifelong devotion; but today I'm committed to creating equitable digital experiences, particularly in healthcare. </p>
         </section>
 
