revising case study images and copy

--- a/nih.html
+++ b/nih.html
@@ -135,7 +135,7 @@
     <section class="content-audit">
 
       <h2 class="content-audit-headline">Conducting the content audit</h2>
-      <p class="content-audit-introduction">I conducted a content audit with four key objectives:</p>
+      <p class="content-audit-introduction">I conducted a content audit with five key objectives:</p>
       <ul class="content-audit-objectives-list">
         <li><p>Determining the full breadth of content on the site</p></li>
         <li><p>Exposing any functional or performance challenges in existing page templates</p></li>
@@ -143,7 +143,7 @@
         <li><p>Preparing a comprehensive prototype and user testing considerations for a future stage</p></li>
         <li><p>Providing recommendations on a revised sitemap per content audit findings</p></li>
       </ul>
-      <p class="content-audit-intro-close">Generating an XML sitemap revealed that <strong>over 6,000</strong> pages existed on the site.</p>
+      <p class="content-audit-intro-close">To get started, I generated an XML sitemap to gauge the breadth of the content. The XML sitemap revealed that <strong>over 6,000</strong> pages existed on the site.</p>
       <h4 class="xml-sitemap-headline">The XML Sitemap</h4>
       <figure class="xml-sitemap">
         <img class= "xml-sitemap-image" src="images/NIH/xml-sitemap.png" alt="NIH XML Sitemap"></img>
