consolidating content audit section

--- a/nih.html
+++ b/nih.html
@@ -135,7 +135,7 @@
     <section class="content-audit">
 
       <h2 class="content-audit-headline">Conducting the content audit</h2>
-      <p class="content-audit-introduction">I conducted a content audit with five key objectives:</p>
+      <p class="content-audit-introduction">I conducted a content audit five goals in mind:</p>
       <ul class="content-audit-objectives-list">
         <li><p>Determining the full breadth of content on the site</p></li>
         <li><p>Exposing any functional or performance challenges in existing page templates</p></li>
@@ -149,203 +149,28 @@
         <img class= "xml-sitemap-image" src="images/NIH/xml-sitemap.png" alt="NIH XML Sitemap"></img>
         <figcaption> The XML Sitemap</figcaption>
       </figure>
-      <p class="excel-content-intro">I created an excel-based content audit. Pages anchored to the navigation are presented in relation to the current navigation structure. Orphan pages are grouped and presented alongside pages of the same template or type.</p>
-      <h4 class="content-snapshot-headline">Existing site content</h4>
+      <p class="excel-content-intro">After gauging the breadth of the content, I used this information to create an excel-based content audit.  I used the navigation structure as a guide for how to group the content, creating tabs in the excel workbook for each navigation subgroup.  Orphan pages, not clearly linked to the navigation are grouped and presented alongside pages of the same template or type. For all content I collected information including page title, URL, primary and sub-navigation, content type (i.e.: PDF, video) an recommendations and notes.</p>
+
       <figure class="content-snapshot">
         <img class= "content-snapshot-image" src="images/NIH/content-snapshot.png" alt="NIH Content Snapshot"></img>
         <figcaption> The XML Sitemap</figcaption>
       </figure>
 
-      <h3 class="audit-navigation-headline">Pages anchored to navigation</h3>
-      <p class="audit-navigation-content"><strong>132 pages</strong> are listed in primary and secondary navigation, excluding large groups of like-templated pages.</p>
-      <ul class="navigation-audit-list">
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Page title</p></li>
-            <li><p>URL</p></li>
-            <li><p>Main navigation</p></li>
-            <li><p>Submenu</p></li>
-            <li><p>Format</p></li>
-            <li><p>Recommendations/notes</p></li>
-          </ul>
-      </ul>
-      <figure class="content-navigation">
-        <img class= "content-navigation-image" src="images/NIH/content-audit-navigation.png" alt="NIH Content audit navigation"></img>
-        <figcaption>Auditing the Navigation structure</figcaption>
-      </figure>
-
-      <h3 class="audit-technology-abstracts-headline">Technology abstracts</h3>
-      <p class="audit-technology-abstracts-content"><strong>1,625 pages</strong> detail technology available for licensing.  The audit sampled the first 100 unfiltered search results.</p>
-      <ul class="technology-abstract-audit-list">
-
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Page title</p></li>
-            <li><p>URL</p></li>
-            <li><p>Main navigation</p></li>
-            <li><p>Submenu</p></li>
-            <li><p>Format</p></li>
-            <li><p><strong>Disease Area</strong></p></li>
-            <li><p><strong>Application</strong></p></li>
-            <li><p><strong>Development Stage</strong></p></li>
-            <li><p><strong>Technology</strong></p></li>
-            <li><p><strong>Institute</strong></p></li>
-            <li><p>Recommendations/notes</p></li>
-          </ul>
-      </ul>
-      <figure class="content-abstracts">
-        <img class="content-abstracts-image" src="images/NIH/content-audit-abstracts.png" alt="NIH Content audit abstracts"></img>
-        <figcaption>Auditing the Navigation structure</figcaption>
-      </figure>
-
-
-      <h3 class="audit-technology-abstracts-indexes-headline">Technology abstract indexes</h3>
-      <p class="audit-technology-abstracts-indexes-content"><strong>174 pre-made paginated search results pages</strong> list available technology abstracts.</p>
-
-      <ul class="technology-abstract-indexes-audit-filter-list">
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Unfiltered/p></li>
-            <li><p>Application</p></li>
-            <li><p>Disease area</p></li>
-            <li><p>Development stage</p></li>
-            <li><p>Keyword</p></li>
-            <li><p>Institute</p></li>
-          </ul>
+      <ul class="content-audit-structure-list">
+        <li><p>Pages anchored to navigation: 132 pages are listed in primary and secondary navigation, excluding large groups of like-templated pages, listed below:</p></li>
+        <li><p>Technology abstracts: 1,625 pages detail technology available for licensing. The audit sampled the first 100 unfiltered search results. Special information collected for abstracts included Disease Area, Application, Development Stage, Technology and Institute</p></li>
+        <li><p>Technology abstract indexes: 174 pre-made paginated search results pages list available technology abstracts</p></li>
+        <li><p>Inventors: 3,608 pages list all inventions by each inventor</p></li>
+        <li><p>Products: 202 pages are in the product showcase including a table of contents and pages for each product. Special information collected for abstracts included Uses, HHS contribution, Features, Inventors, HHS institute/agency, Licensee, Market launch</p></li>
+        <li><p>Documents: 156 PDF & Word documents linked are to through out the site</p></li>
+        <li><p>Staff: 47 pages feature staff profiles and indexes of staff profiles organized by last initial</p></li>
+        <li><p>RSS Feeds: 66 RSS feed files (.xml) are available for addition to a user’s feed reader. Special information collected for abstracts included RSS Topic</p></li>
+        <li><p>News: 48 news & event articles highlight updates from OTT</p></li>
       </ul>
 
-      <ul class="technology-abstract-indexes-audit-list">
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Page title</p></li>
-            <li><p>URL</p></li>
-            <li><p>Main navigation</p></li>
-            <li><p>Submenu</p></li>
-            <li><p>Format</p></li>
-            <li><p>Recommendations/notes</p></li>
-          </ul>
-      </ul>
+      <p class="content-audit-closing">I studied the content for inefficiencies and bottlenecks that might stand between user needs and the offices core goal of facilitating access to research data, licensing and partnership opportunities and presented the findings and recommendations.</p>
 
-      <figure class="content-abstracts-indexes">
-        <img class="content-abstracts-indexes-image" src="images/NIH/content-audit-abstract-indexes.png" alt="NIH Content audit abstract indexes"></img>
-        <figcaption>Auditing the technology abtract images</figcaption>
-      </figure>
 
-      <h3 class="audit-inventors-headline">Inventors</h3>
-      <p class="audit-inventors-content"><strong>3,608 pages</strong> list all inventions by each inventor.</p>
-      <ul class="inventor-audit-list">
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Page title</p></li>
-            <li><p>URL</p></li>
-            <li><p>Main navigation</p></li>
-            <li><p>Submenu</p></li>
-            <li><p>Format</p></li>
-            <li><p>Recommendations/notes</p></li>
-          </ul>
-      </ul>
-      <figure class="content-inventors">
-        <img class= "content-inventors-image" src="images/NIH/content-audit-inventors.png" alt="NIH Content audit inventors"></img>
-        <figcaption>Auditing the inventor pages</figcaption>
-      </figure>
-
-      <h3 class="audit-products-headline">Products</h3>
-      <p class="audit-products-content"><strong>202 pages </strong>are in the product showcase including a table of contents and pages for each product.</p>
-      <ul class="products-audit-list">
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Page title</p></li>
-            <li><p>URL</p></li>
-            <li><p>Main navigation</p></li>
-            <li><p>Submenu</p></li>
-            <li><p>Format</p></li>
-            <li><p><strong>Uses</strong></p></li>
-            <li><p><strong>HHS conttribution</strong></p></li>
-            <li><p><strong>Features</strong></p></li>
-            <li><p><strong>Inventors</strong></p></li>
-            <li><p><strong>HHS institute/agency</strong></p></li>
-            <li><p><strong>Licensee</strong></p></li>
-            <li><p><strong>Market launch</strong></p></li>
-            <li><p>Recommendations/notes</p></li>
-          </ul>
-      </ul>
-      <figure class="content-products">
-        <img class= "content-products-image" src="images/NIH/content-audit-products.png" alt="NIH Content audit products"></img>
-        <figcaption>Auditing the product pages</figcaption>
-      </figure>
-
-      <h3 class="audit-documents-headline">Documents</h3>
-      <p class="audit-documents-content"><strong>156 PDF & Word documents</strong> linked are to through out the site.</p>
-      <ul class="inventor-documents-list">
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Page title</p></li>
-            <li><p>URL</p></li>
-            <li><p>Main navigation</p></li>
-            <li><p>Submenu</p></li>
-            <li><p>Format</p></li>
-            <li><p>Recommendations/notes</p></li>
-          </ul>
-      </ul>
-      <figure class="content-documents">
-        <img class= "content-documents-image" src="images/NIH/content-audit-documents.png" alt="NIH Content audit documnents"></img>
-        <figcaption>Auditing the documents</figcaption>
-      </figure>
-
-      <h3 class="audit-staff-headline">Staff</h3>
-      <p class="audit-staff-content"><strong>47 pages </strong>feature staff profiles and indexes of staff profiles organized by last initial.</p>
-      <ul class="inventor-staff-list">
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Page title</p></li>
-            <li><p>URL</p></li>
-            <li><p>Main navigation</p></li>
-            <li><p>Submenu</p></li>
-            <li><p>Format</p></li>
-            <li><p>Recommendations/notes</p></li>
-          </ul>
-      </ul>
-      <figure class="content-staff">
-        <img class= "content-staff-image" src="images/NIH/content-audit-staff.png" alt="NIH Content audit staff"></img>
-        <figcaption>Auditing the staff listing pages</figcaption>
-      </figure>
-
-      <h3 class="audit-rss-headline">RSS Feeds</h3>
-      <p class="audit-rss-content"><strong>66 RSS feed files (.xml)</strong> are available for addition to a user’s feed reader.</p>
-      <ul class="audit-rss-list">
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Page title</p></li>
-            <li><p>URL</p></li>
-            <li><p>Main navigation</p></li>
-            <li><p>Submenu</p></li>
-            <li><p>Format</p></li>
-            <li><p><strong>RSS Topic</strong></p></li>
-            <li><p>Recommendations/notes</p></li>
-          </ul>
-      </ul>
-      <figure class="content-rss">
-        <img class= "content-rss-image" src="images/NIH/content-audit-rss.png" alt="NIH Content audit rss feeds"></img>
-        <figcaption>Auditing the RSS feeds</figcaption>
-      </figure>
-
-      <h3 class="audit-news-headline">News</h3>
-      <p class="audit-news-content"><strong>48 news & event articles</strong> highlight updates from OTT.</p>
-      <ul class="audit-news-list">
-        <li><p>Date captured</p>
-          <ul class="data-captured-sublist">
-            <li><p>Page title</p></li>
-            <li><p>URL</p></li>
-            <li><p>Main navigation</p></li>
-            <li><p>Submenu</p></li>
-            <li><p>Format</p></li>
-            <li><p>Recommendations/notes</p></li>
-          </ul>
-      </ul>
-      <figure class="content-news">
-        <img class= "content-news-image" src="images/NIH/content-audit-news.png" alt="NIH Content audit news"></img>
-        <figcaption>Auditing the news pages</figcaption>
-      </figure>
     </section>
 
     <section class="content-audit-findings-and-recommendations">
