refining of case study content

--- a/nih.html
+++ b/nih.html
@@ -175,17 +175,7 @@
 
     <section class="content-audit-findings-and-recommendations">
       <h2 class="content-audit-findings-headline">Content Audit Findings & Recommendations</h2>
-      <h3 class="audit-findings-list-headline">Key findings from the audit</h2>
-      <ul class="audit-findings-list">
-        <li><p>Technology abstracts not clearly labeled</p></li>
-        <li><p>Technology search filters not comprehensively covering all options</p></li>
-        <li><p>Breadcrumbs with dead end links for inventor index pages</p></li>
-        <li><p>RSS feed index not listing all feeds</p></li>
-        <li><p>Most articles are text only</p></li>
-        <li><p>Navigation doesn’t consistently guide the user</p></li>
-      </ul>
-
-      <h3 class="audit-recommendations-list-headline">Recommendations for enhancement</h2>
+      <p class="audit-findings-recommendations-intro">Analyzing the audit revealed a few important opportunities for improvement.  Abstracts were poorly labeled and search filters obscured access to some results.  Breadcrumbs lead users to dead end links for inventor index pages and the RSS feed index was incomplete. Articles lacked engaging multimedia content and most seriously, the navigation structure poorly guided the user journey. Recommendations for redesign included:</h2>
       <ul class="audit-recommendations-list">
         <li><p>Technology abstract template</p></li>
         <li><p>Search component & filter list options</p></li>
@@ -196,18 +186,19 @@
       </ul>
 
       <h3 class="detailed-findings-headline">Detailed findings</h2>
-
-      <h4 class="page-findings-headline">The majority of site content lies in technology abstracts and inventor listings</h4>
-      <figure class="page-findings">
-        <img class= "page-findings-image" src="images/NIH/findings-pages.png" alt="page distribution findings"></img>
-        <figcaption>page distributions</figcaption>
-      </figure>
+      <p class="detailed-findings-intro">Taking a close look at the data provided a greater understanding of the content. There were noted observation about the content distribution, content types and overall ease of access. </p>
 
       <h4 class="navigation-content-headline"> Navigation Content Distribution:  About OTT & Reports/Stats sections have the most navigational touchpoints.</h4>
       <figure class="navigation-content-findings">
         <img class= "navigation-content-findings-image" src="images/NIH/findings-navigation.png" alt="page distribution findings"></img>
         <figcaption>Navigation content</figcaption>
         <p class="navigation-content-recommendation"><strong>Recommendation:</strong> Adjust navigation to encourage engagement with licensing related content</p>
+      </figure>
+
+      <h4 class="page-findings-headline">The majority of site content lies in technology abstracts and inventor listings</h4>
+      <figure class="page-findings">
+        <img class= "page-findings-image" src="images/NIH/findings-pages.png" alt="page distribution findings"></img>
+        <figcaption>page distributions</figcaption>
       </figure>
 
       <h4 class="page-findings-headline">The majority of site content lies in technology abstracts and inventor listings</h4>
