refining case study content

--- a/nih.html
+++ b/nih.html
@@ -135,7 +135,7 @@
     <section class="content-audit">
 
       <h2 class="content-audit-headline">Conducting the content audit</h2>
-      <p class="content-audit-introduction">I conducted a content audit five goals in mind:</p>
+      <p class="content-audit-introduction">I conducted a content audit with five goals in mind:</p>
       <ul class="content-audit-objectives-list">
         <li><p>Determining the full breadth of content on the site</p></li>
         <li><p>Exposing any functional or performance challenges in existing page templates</p></li>
@@ -208,13 +208,8 @@
         <p class="page-findings-recommendation"><strong>Recommendation</strong>: Update the technology abstract template to improve readability</p>
       </figure>
 
-      <h4 class="abstract-findings-headline">Disease Area Focus of Technology Abstracts: A sample of 100 abstracts revealed that <strong>Cancer</strong> and <strong>Virology </strong>are most studied, but <strong>18% are difficult to classify</strong>.</h4>
-      <figure class="abstract-findings">
-        <img class= "abstract-findings-image" src="images/NIH/findings-abstracts.png" alt="page distribution findings"></img>
-        <figcaption>Technology abstract findings</figcaption>
-      </figure>
-
-      <h4 class="reviewing-abstrats-headline">How I reviewed technology abstracts & challenges encountered</h4>
+      <h4 class="reviewing-abstracts-headline">How I reviewed technology abstracts & challenges encountered</h4>
+      <p class ="reviewing-abstracts-intro">With over 1,500 technology abstracts comprising more than 25% of pages on the site, its important to ensure that the abstacts are inuitively designed, functionally effective, accessible for all types of users and easy to navigate. An analysis of one of the abstracts reveals deficiencies that we will need to address:</p>
       <ul class= reviewing-abstracts-list>
         <li><p>Fixed-list search filters: include disease area, application, development stage, technology, institute/center, seeking collaboration</p></li>
         <li><p>Disease area: (infectious disease (viral)) inferred from headline</p></li>
@@ -227,41 +222,52 @@
       </ul>
       <figure class="reviewing-abstracts">
         <img class= "reviewing-abstracts-image" src="images/NIH/findings-reviewing-abstracts.png" alt="page distribution findings"></img>
-        <figcaption>DIffculties in reviewing abstracts for the audit</figcaption>
+        <figcaption>Diffculties in reviewing abstracts for the audit</figcaption>
       </figure>
 
-      <h4 class="inventor-page-headline"><strong>37%</strong> of inventor inventory pages are currently not returning results.</h4>
+      <h4 class="abstract-findings-headline">Disease Area Focus of Technology Abstracts: A sample of 100 abstracts revealed that <strong>Cancer</strong> and <strong>Virology </strong>are most studied, but <strong>18% are difficult to classify</strong>.</h4>
+      <figure class="abstract-findings">
+        <img class= "abstract-findings-image" src="images/NIH/findings-abstracts.png" alt="page distribution findings"></img>
+        <figcaption>Technology abstract findings</figcaption>
+        <p class="abstract-findings-recommendation"><strong>Recommendation:</strong> Ensure that abstracts are consistently and accurately classified and ensure that all institutes and centers have equitable access to the tool needed to submit research</p>
+      </figure>
+
+
       <figure class="inventor-page-findings">
         <img class= "inventor-page-findings-image" src="images/NIH/findings-inventors.png" alt="page distribution findings"></img>
         <figcaption>inventor page findings</figcaption>
+        <p class="inventor-page-recommendation">Recommendations: Verify path of all breadcrumbs and delete 1,329 broken inventor inventory pages</p>
       </figure>
 
-      <h4 class="reviewing-inventory-pages-headline">Discovering Broken Inventory Pages</h4>
+      <h4 class="reviewing-inventory-pages-headline">Discovering that <strong>37%</strong> of inventor inventory pages are currently not returning results.</h4>
+      <p class="reviewing-inventory-pages-intro">Inventor inventory pages are used to list all abstracts associated with an individual inventor. Over 3,000 such pages exist on the site, comprising over 50% of the site pages. Disovering that 37% of these pages lead to broken links presents a significant problem. Encountering these links is not only poor for the user's immediate exerience, but also creates a poorly structured site with potential impacts to SEO, and accessibility.</p>
       <ul class="reviewing-inventory-pages-list">
         <li><p>Technology abstract links to more inventions by inventor</p></li>
         <li><p>Inventor’s inventory breadcrumbs include link to current page(3) and “NIH Opportunities from Inventor” (4).</p></li>
         <li><p>This page is broken and returns no results.</p></li>
         <li><p>This is broken and returns no results, resulting in 1,329 unnecessary internal links</p></li>
       </ul>
+
       <figure class="reviewing-inventory-pages">
         <img class= "reviewing-inventory-pages-image" src="images/NIH/findings-inventory-pages.png" alt="page distribution findings"></img>
         <figcaption>Probelms with inventory pages</figcaption>
-        <p class="reviewing-inventory-recommendation">Recommendations: Verify path of all breadcrumbs and delete 1,329 broken inventor inventory pages</p>
       </figure>
 
-      <h4 class="product-findings-headline"> Count of Product Releases by Institutes and Centers (ICs): <strong>4 out of 11</strong> ICs are responsible for <strong>94%</strong> of published product releases.</h4>
-      <p class="product-findings-recommendation">Recommendations: Explore IC user experience to guide future improvements to components and content</p>
-      <ul class="product-findings-list">
-        <li><p>Submitting abstracts</p></li>
-        <li><p>Reporting licensing and product releases</p></li>
-        <li><p>Receiving royalty payments </p></li>
-      </ul>
+      <figure class="inventor-page-findings">
+        <img class= "inventor-page-findings-image" src="images/NIH/findings-inventors.png" alt="page distribution findings"></img>
+        <figcaption>inventor page findings</figcaption>
+        <p class="inventor-page-recommendation">Recommendations: Verify path of all breadcrumbs and delete 1,329 broken inventor inventory pages</p>
+      </figure>
 
-      <h4 class="document-findings-headline">Count of Document Types: <strong>81%</strong> of site documents are PDFs.</h4>
-      <figure class="documnent-findings">
+      <h4 class="product-findings-headline"> Evaluating Product Releases by Institutes and Centers (ICs): <strong>4 out of 11</strong> ICs are responsible for <strong>94%</strong> of published product releases.</h4>
+      <p class="product-findings-recommendation">Recommendations: Explore IC user experience to guide future improvements to components and content. Make is easier to submit abstracts to increase visibility to licensees, report licensing and product releases and manage royalty payments</p>
+
+
+      <h4 class="document-findings-headline">Evaluating Document Types: <strong>81%</strong> of site documents are PDFs.</h4>
+      <figure class="document-findings">
         <img class= "document-findings-image" src="images/NIH/findings-documents.png" alt="page distribution findings"></img>
         <figcaption>Document findingss</figcaption>
-        <p class="document-findings-recommendation">Recommendation: Improve engagement by converting documents to HTML content (graphs, charts and other media) within site pages</p>
+        <p class="document-findings-recommendation">Recommendation: Improve engagement by converting documents to HTML content (graphs, charts and other media) within site pages. Minimize the need for users to navigate to a document.</p>
       </figure>
 
       <h4 class="rss-findings-headline">Common Discrepancies Found in Listing RSS Feeds: <strong>10</strong> RSS feeds were omitted from feed library.</h4>
@@ -287,7 +293,7 @@
         <li><p>Information not where expected</p></li>
         <li><p>Navigational logic inconsistent</p></li>
       </ul>
-      <p class="opportunities-for-improvement-headline">Opportunities for iprovement</p>
+      <p class="opportunities-for-improvement-headline">Opportunities for improvement</p>
       <ul class="opportunties-for-improvement-list">
         <li><p>Reconsider top level navigation content grouping</p></li>
         <li><p>Provide more detailed descriptions at the top level and drop-down state</p></li>
